# UnifiedQuantum

./: .gitignore  .gitmodules  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  CONTRIBUTING.md  README.md  README_en.md  RELEASE_EXECUTION_PLAN_0.0.16.md  RELEASE_REPORT_0.0.15.md  RELEASE_REPORT_0.0.16.md  RISK_REPORT_ROUND_2.md  codecov.yml  conftest.py  pyproject.toml  pytest.ini  setup.py  stubgen.py  uniqc-report.md  unsolved-issue.md
.github/: copilot-instructions.md
.github/workflows/: build_and_test.yml  contract_parity.yml  docs.yml  pypi-publish.yml  pytest_coverage.yml  python_build_wheel.yml
UniqcCpp/Pybinder/: CMakeLists.txt  uniqc_cpp.cpp
UniqcCpp/src/: CMakeLists.txt  basic_math.cpp  basic_math.h  density_operator_simulator.cpp  density_operator_simulator.h  qopcode.cpp  qopcode.h  rng.h  simulator.cpp  simulator.h  simulator_common.cpp  simulator_common.h  simulator_density_op_impl.cpp  simulator_density_op_impl.h  simulator_statevector_impl.cpp  simulator_statevector_impl.h
UniqcCpp/test/: CMakeLists.txt  main.cpp
docs/: Makefile  _build_latex_postprocess.py  _tex_patch.py  conf.py  index.md  index.rst  requirements.txt  uniqc-docs-fix-summary.md
docs/_static/: switcher.json
docs/source/: advanced.rst  api_index.md  cli.rst  guide.rst  uniqc.algorithmics.ansatz.rst  uniqc.algorithmics.circuits.rst  uniqc.algorithmics.measurement.rst  uniqc.algorithmics.rst  uniqc.algorithmics.state_preparation.rst  uniqc.algorithms.core.ansatz._types.rst  uniqc.algorithms.core.ansatz.rst  uniqc.analyzer.rst  uniqc.backend.rst  uniqc.circuit_adapter.rst  uniqc.circuit_builder.named_circuit.rst  uniqc.circuit_builder.parameter.rst  uniqc.circuit_builder.qubit.rst  uniqc.circuit_builder.rst  uniqc.config.rst  uniqc.exceptions.rst  uniqc.network_utils.rst  uniqc.originir.rst  uniqc.pytorch.rst  uniqc.qasm.rst  uniqc.rst  uniqc.simulator.rst  uniqc.task.adapters.rst  uniqc.task.config.rst  uniqc.task.normalizers.rst  uniqc.task.result_types.rst  uniqc.task.rst  uniqc.task_manager.rst  uniqc.test.rst  uniqc.transpiler.rst  uniqc_api.rst
example-exec-logs/: index.json
examples/: README.md
examples/0_quickstart/: 01_quickstart.py
examples/1_basic_usage/: 01_circuit_basics.py  02_local_simulation.py  03_submit_and_postprocess.py  04_config.py  05_visualize.py
examples/2_advanced/: 01_compile_options.py  02_region_selector.py  03_variational_qaoa.py  04_dummy_chip_noise.py  05_calibration_xeb.py  06_qem_m3.py  07_mps_simulator.py  08_mid_circuit_measurement.py
examples/3_best_practices/: 00_config_and_backend_cache.py  01_bare_circuit_simulation.py  02_named_circuit_and_reuse.py  03_compile_region_dummy_backend.py  04_api_submit_dummy_result.py  05_cli_workflow_dummy.py  06_cloud_backend_template.py  07_variational_circuit.py  08_torch_quantum_training.py  09_calibration_qem_dummy.py  10_xeb_workflow_dummy.py  11_native_torch_training.py  README.md
examples/4_cli/: 01_cli_walkthrough.py
examples/5_webui/: 01_gateway_demo.py
examples/CLI_example/: README.md
examples/advanced/: README.md  mps_simulator.py  parametric_circuit.py  pytorch_integration.py
examples/algorithms/: grover.py  hybrid_model.py  qaoa.md  qaoa.py  qaoa_pytorch.py  qcnn_classifier.py  qnn_classifier.py  qpe.py  vqe.md  vqe.py  vqe_pytorch.py
examples/circuits/: README.md  amplitude_estimation.py  deutsch-jozsa.py  dicke_state.py  entangled_states.py  grover_oracle.py  qft.py  thermal_state.py  vqd.py
examples/getting-started/: 1_circuit_remap.py  2_dummy_server.py  3_result_postprocess.py  README.md  config_example.py
examples/measurement/: shadow_tomography.py  state_tomography.py
examples/state_preparation/: hadamard_superposition.py  rotation_prepare.py
examples/wk180/: readout_em.py  xeb.py
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  main.tsx
scripts/: build_docs.py  check_doc_logs.py  check_local_links.py  check_release.py  generate_best_practice_notebooks.py  generate_release_notes.py  report_pytest_failures.py  smoke_pytorch_extra.py  stubgen.py
site/: index.html  script.js  styles.css
uniq/cli/: main.py
uniqc/: __init__.py  __main__.py  _deprecation.py  _error_hints.py  backend.py  backend_cache.py  backend_info.py  backend_registry.py  chip_cache.py  chip_service.py  circuit_adapter.py  config.py  exceptions.py  network_utils.py  region_selector.py  task_manager.py  version.py
uniqc/algorithm/: __init__.py  readout_em_workflow.py  xeb_workflow.py
uniqc/algorithms/: __init__.py  _compat.py
uniqc/analyzer/: draw.py  result_adapter.py
uniqc/backend_adapter/: __init__.py  backend.py  backend_cache.py  backend_info.py  backend_registry.py  circuit_adapter.py  config.py  database_migration.py  dummy_backend.py  network_utils.py  preflight.py  region_selector.py  task_manager.py  virtual_machine.py
uniqc/calibration/: __init__.py  results.py
uniqc/circuit_builder/: __init__.py  classical_program.py  dynamic_program.py  matrix.py  named_circuit.py  normalize.py  opcode.py  originir_ext_spec.py  originir_spec.py  parameter.py  qasm_spec.py  qcircuit.py  qram.py  random_originir.py  random_qasm.py  translate_qasm2_oir.py
uniqc/cli/: __init__.py  __main__.py  backend.py  backend_virtual.py  calibrate.py  chip_cache.py  chip_info.py  chip_service.py  circuit.py  config_cmd.py  doctor.py  main.py  output.py  refs.py  result.py  simulate.py  submit.py  task.py
uniqc/compile/: __init__.py  _utils.py  compiler.py  converter.py  decompose.py  draw.py  policy.py  qiskit_transpiler.py  timeline.py  validation.py
uniqc/gateway/: __init__.py  cli.py  config.py  server.py  ws.py
uniqc/originir/: originir_base_parser.py
uniqc/pytorch/: batch_executor.py
uniqc/qasm/: qasm_base_parser.py
uniqc/qem/: __init__.py  m3.py  readout_em.py  zne.py
uniqc/simulator/: __init__.py  base_simulator.py  dynamic_executor.py  error_model.py  get_backend.py  mps_simulator.py  opcode_simulator.py  originir_ext_simulator.py  originir_simulator.py  qasm_simulator.py  qutip_sim_impl.py  simulator.py  torchquantum_simulator.py  (+2 more)
(+734 files in other folders)
