[build-system]
requires = ["setuptools", "setuptools_scm", "wheel", "cmake", "ninja", "pybind11"]
build-backend = "setuptools.build_meta"
# setup.py is retained for custom CMakeExtension / CMakeBuild logic

[project]
name = "unified-quantum"
dynamic = ["version"]
description = "UnifiedQuantum - A unified, non-commercial quantum computing aggregation framework."
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.10,<3.14"
authors = [
    { name = "Agony", email = "chenzhaoyun@iai.ustc.edu.cn" },
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "Programming Language :: C++",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX",
    "Operating System :: Unix",
]
dependencies = [
    "numpy",
    "requests",
    "pyyaml",
    "sympy",
    "typing-extensions",
    "typer",
    "rich",
    "scipy",
    "fastapi",
    "uvicorn[standard]",
]

[project.urls]
"Source Code" = "https://github.com/IAI-USTC-Quantum/UnifiedQuantum.git"

[project.scripts]
uniqc = "uniqc.cli.main:app"

[project.optional-dependencies]
quafu = ["pyquafu"]
qiskit = ["qiskit", "qiskit-aer", "qiskit-ibm-runtime"]
originq = ["pyqpanda3"]
simulation = ["qutip", "qutip-qip"]
visualization = ["matplotlib", "seaborn", "pandas"]
pytorch = ["torch"]
quark = ["quarkstudio; python_version >= '3.12'", "quarkcircuit; python_version >= '3.12'", "ipython"]
all = [
    "quarkstudio; python_version >= '3.12'",
    "quarkcircuit; python_version >= '3.12'",
    "qiskit", "qiskit-aer",
    "qiskit-ibm-runtime",
    "pyqpanda3",
    "qutip", "qutip-qip",
    "matplotlib", "seaborn", "pandas",
    "torch",
    "dill",
]

[tool.setuptools]
zip-safe = false

[tool.setuptools.packages.find]
where = ["."]
include = ["uniqc*"]
exclude = ["uniqc.test*"]

[tool.cibuildwheel]
build = "cp310-* cp311-* cp312-* cp313-*"
skip = "*-musllinux_* *-win32"
test-command = "python -c \"import uniqc_cpp\""

[tool.cibuildwheel.windows]
archs = ["AMD64"]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "SIM"]
ignore = ["E501", "N801", "N803", "N806"]  # line length; CapWords for ErrorLoader subclasses; lowercase for math vars (U,H,K,E physics notation)

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[dependency-groups]
dev = [
    "cibuildwheel",
    "pytest",
    "pytest-cov",
    "ruff",
    "pre-commit",
    "tomli",
]
docs = [
    "sphinx",
    "pydata-sphinx-theme",
    "sphinx_rtd_theme",
    "recommonmark",
    "sphinx-markdown-tables",
    "linkify-it-py",
    "myst_parser",
    "nbsphinx",
    "setuptools_scm",
    "intersphinx-registry",
    "sphinx-autoapi",
]

[tool.setuptools_scm]
write_to = "uniqc/_version.py"
fallback_version = "0.0.0"
local_scheme = "no-local-version"

[tool.setuptools.package-data]
"uniqc" = ["*.pyi"]
"uniqc.simulator" = ["uniqc_cpp.pyi"]
