[build-system]
requires = ["setuptools", "setuptools_scm", "wheel", "cmake", "ninja", "pybind11"]
build-backend = "setuptools.build_meta"
# setup.py is retained for custom CMakeExtension / CMakeBuild logic

[project]
name = "unified-quantum"
dynamic = ["version"]
description = "UnifiedQuantum - A unified, non-commercial quantum computing aggregation framework."
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.10,<3.15"
authors = [
    { name = "Agony", email = "chenzhaoyun@iai.ustc.edu.cn" },
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "Programming Language :: C++",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX",
    "Operating System :: Unix",
]
dependencies = [
    "numpy",
    "requests",
    "pyyaml",
    "sympy",
    "typing-extensions",
    "typer",
    "rich",
    "scipy",
    "fastapi",
    "uvicorn[standard]",
    "qiskit",
    "qiskit-aer",
    "qiskit-ibm-runtime",
]

[project.urls]
"Source Code" = "https://github.com/IAI-USTC-Quantum/UnifiedQuantum.git"

[project.scripts]
uniqc = "uniqc.cli.main:app"

[project.optional-dependencies]
# pyqpanda3 has no cp314 wheel as of 0.3.5 — gate to Python < 3.14
# until upstream publishes one.
originq = ["pyqpanda3; python_version < '3.14'"]
simulation = ["qutip", "qutip-qip"]
visualization = ["matplotlib", "seaborn", "pandas"]
pytorch = ["torch"]
# quarkstudio/quarkcircuit are Linux/macOS x86 (no win32 wheel) and their
# transitive deps (srpc, proxy.py) don't yet have stable cp314 wheels —
# gate to py>=3.12 and py<3.14 and non-win32 so cross-platform resolvers
# (uv) don't fail on win32 / cp314 splits.
quark = [
    "quarkstudio; python_version >= '3.12' and python_version < '3.14' and sys_platform != 'win32'",
    "quarkcircuit; python_version >= '3.12' and python_version < '3.14' and sys_platform != 'win32'",
    "ipython",
]
# [all] is intentionally the portable, broadly-installable superset.
# It excludes [quark] because quark deps have no win32 wheels and would
# break uv lock resolution on Windows. Install [quark] explicitly on
# Linux/macOS if you need the Quark platform path.
all = [
    "pyqpanda3; python_version < '3.14'",
    "qutip", "qutip-qip",
    "matplotlib", "seaborn", "pandas",
    "torch",
]

[tool.setuptools]
zip-safe = false

[tool.setuptools.packages.find]
where = ["."]
include = ["uniqc*"]
exclude = ["uniqc.test*"]

[tool.cibuildwheel]
build = "cp310-* cp311-* cp312-* cp313-* cp314-*"
skip = "*-musllinux_* *-win32"
test-command = "python -c \"import uniqc_cpp\""

[tool.cibuildwheel.windows]
archs = ["AMD64"]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "SIM"]
ignore = ["E501", "N801", "N803", "N806"]  # line length; CapWords for ErrorLoader subclasses; lowercase for math vars (U,H,K,E physics notation)

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[dependency-groups]
dev = [
    "cibuildwheel",
    "pytest",
    "pytest-cov",
    "ruff",
    "pre-commit",
    "tomli",
    "pybind11-stubgen",
    "httpx",
]
docs = [
    "sphinx",
    "furo",
    "pydata-sphinx-theme",
    "sphinx_rtd_theme",
    "recommonmark",
    "sphinx-markdown-tables",
    "linkify-it-py",
    "myst_parser",
    "nbsphinx",
    "setuptools_scm",
    "intersphinx-registry",
    "sphinx-autoapi",
]

[tool.setuptools_scm]
write_to = "uniqc/_version.py"
fallback_version = "0.0.0"
local_scheme = "no-local-version"

[tool.setuptools.package-data]
"uniqc" = ["*.pyi"]
"uniqc.simulator" = ["uniqc_cpp.pyi"]

[tool.coverage.run]
source = ["uniqc"]
omit = [
    "uniqc/test/*",
    "uniqc/_version.py",
    "uniqc/**/__init__.py",
    "*/site-packages/*",
]

[tool.coverage.report]
exclude_also = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
    "@(abc\\.)?abstractmethod",
]
show_missing = true
skip_covered = false
