[build-system]
requires = ["setuptools", "setuptools_scm", "wheel", "cmake", "ninja", "pybind11"]
build-backend = "setuptools.build_meta"
# setup.py is retained for custom CMakeExtension / CMakeBuild logic

[project]
name = "unified-quantum"
dynamic = ["version"]
description = "UnifiedQuantum - A unified, non-commercial quantum computing aggregation framework."
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.10,<3.15"
authors = [
    { name = "Agony", email = "chenzhaoyun@iai.ustc.edu.cn" },
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "Programming Language :: C++",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX",
    "Operating System :: Unix",
]
dependencies = [
    "numpy",
    "requests",
    "pyyaml",
    "sympy",
    "typing-extensions",
    "typer",
    "rich",
    "scipy",
    "fastapi",
    "uvicorn[standard]",
    "qiskit",
    "qiskit-aer",
    "qiskit-ibm-runtime",
]

[project.urls]
"Source Code" = "https://github.com/IAI-USTC-Quantum/UnifiedQuantum.git"

[project.scripts]
uniqc = "uniqc.cli.main:app"

[project.optional-dependencies]
# pyqpanda3 has no cp314 wheel as of 0.3.5 — gate to Python < 3.14
# until upstream publishes one.
originq = ["pyqpanda3; python_version < '3.14'"]
simulation = ["qutip", "qutip-qip"]
visualization = ["matplotlib", "seaborn", "pandas"]
pytorch = ["torch", "torchquantum-ng"]
# quarkstudio/quarkcircuit are Linux/macOS x86 (no win32 wheel) and their
# transitive deps (srpc, proxy.py) don't yet have stable cp314 wheels —
# gate to py>=3.12 and py<3.14 and non-win32 so cross-platform resolvers
# (uv) don't fail on win32 / cp314 splits.
quark = [
    "quarkstudio; python_version >= '3.12' and python_version < '3.14' and sys_platform != 'win32'",
    "quarkcircuit; python_version >= '3.12' and python_version < '3.14' and sys_platform != 'win32'",
    "ipython",
]
# [all] is intentionally the portable, broadly-installable superset.
# It excludes [quark] because quark deps have no win32 wheels and would
# break uv lock resolution on Windows. Install [quark] explicitly on
# Linux/macOS if you need the Quark platform path.
all = [
    "pyqpanda3; python_version < '3.14'",
    "qutip", "qutip-qip",
    "matplotlib", "seaborn", "pandas",
    "torch", "torchquantum-ng",
]

[tool.setuptools]
zip-safe = false

[tool.setuptools.packages.find]
where = ["."]
include = ["uniqc*"]
exclude = ["uniqc.test*"]

[tool.cibuildwheel]
build = "cp310-* cp311-* cp312-* cp313-* cp314-*"
skip = "*-musllinux_* *-win32"
test-command = "python -c \"import uniqc_cpp\""

[tool.cibuildwheel.windows]
archs = ["AMD64"]

[tool.ruff]
line-length = 120
target-version = "py310"
extend-exclude = [
    "UniqcCpp/Thirdparty",
    "docs/_build",
    "docs/_generated",
    "example-exec-logs",
]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "SIM"]
ignore = ["E501", "N801", "N803", "N806"]  # line length; CapWords for ErrorLoader subclasses; lowercase for math vars (U,H,K,E physics notation)

[tool.ruff.lint.per-file-ignores]
# These packages intentionally expose their imported public API.
"uniqc/**/__init__.py" = ["F401", "F811", "N814", "SIM105"]
# Legacy test/example fixtures use compact physics notation and compatibility
# imports; production modules remain subject to the normal rule set.
"uniqc/test/**/*.py" = ["B006", "B007", "B017", "B018", "B028", "B904", "C400", "C405", "C408", "C416", "E402", "E702", "E741", "E731", "F403", "F405", "F541", "F601", "F811", "F841", "I001", "N802", "N999", "SIM101", "SIM102", "SIM103", "SIM105", "SIM108", "SIM118", "SIM210", "SIM211", "UP006", "UP007", "UP035", "UP045", "UP031", "W291"]
"examples/**/*.py" = ["B006", "B007", "B008", "B904", "C400", "C408", "E402", "E702", "E741", "F401", "F403", "F405", "F541", "F601", "F811", "F841", "I001", "N802", "N999", "SIM102", "SIM105", "SIM108", "SIM118", "SIM210", "UP006", "UP007", "UP035", "UP045", "UP031", "W291"]
"docs/**/*.py" = ["E402", "F541", "F601", "I001", "SIM105", "SIM108", "UP006", "W291"]
"uniqc/algorithms/core/circuits/dicke_state.py" = ["E741"]
"uniqc/backend_adapter/task/adapters/originq_adapter.py" = ["E402"]
"uniqc/backend_adapter/task/adapters/quafu_adapter.py" = ["E402"]
"uniqc/backend_adapter/task/options.py" = ["SIM108"]
"uniqc/backend_adapter/task_manager.py" = ["SIM105"]
"uniqc/calibration/xeb/parallel_cz.py" = ["N802"]
"uniqc/circuit_builder/opcode.py" = ["UP007", "UP045"]
"uniqc/circuit_builder/translate_qasm2_oir.py" = ["N802", "SIM102"]
"uniqc/cli/calibrate.py" = ["B008", "N817"]
"uniqc/cli/main.py" = ["E402"]
"uniqc/cli/simulate.py" = ["B008"]
"uniqc/config.py" = ["E402", "SIM105"]
"uniqc/simulator/mps_simulator.py" = ["SIM102"]
"uniqc/simulator/opcode_simulator.py" = ["F403", "F405"]
"uniqc/utils/expectation.py" = ["N802"]
"uniqc/visualization/timeline.py" = ["B008", "E402"]
"setup.py" = ["SIM102"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[dependency-groups]
dev = [
    "cibuildwheel",
    "pytest",
    "pytest-cov",
    "ruff",
    "pre-commit",
    "tomli",
    "pybind11-stubgen",
    "httpx",
]
docs = [
    "sphinx",
    "furo",
    "pydata-sphinx-theme",
    "sphinx_rtd_theme",
    "recommonmark",
    "sphinx-markdown-tables",
    "linkify-it-py",
    "myst_parser",
    "nbsphinx",
    "setuptools_scm",
    "intersphinx-registry",
    "sphinx-autoapi",
]

[tool.setuptools_scm]
write_to = "uniqc/_version.py"
fallback_version = "0.0.0"
local_scheme = "no-local-version"

[tool.setuptools.package-data]
"uniqc" = ["*.pyi"]
"uniqc.simulator" = ["uniqc_cpp.pyi"]

[tool.coverage.run]
source = ["uniqc"]
omit = [
    "uniqc/test/*",
    "uniqc/_version.py",
    "uniqc/**/__init__.py",
    "*/site-packages/*",
]

[tool.coverage.report]
exclude_also = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
    "@(abc\\.)?abstractmethod",
]
show_missing = true
skip_covered = false
